[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Building/Building.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Room/Room.gd" type="Script" id=2]
[ext_resource path="res://Art/A_ShroomRoom.png" type="Texture" id=3]
[ext_resource path="res://Art/A_GreenRoom.png" type="Texture" id=4]
[ext_resource path="res://Art/A_EmptyRoom.png" type="Texture" id=5]
[ext_resource path="res://Art/Shroom Room/Room.png" type="Texture" id=6]
[ext_resource path="res://Art/Shroom Room/Left_open.png" type="Texture" id=7]
[ext_resource path="res://Art/Shroom Room/Left_closed.png" type="Texture" id=8]
[ext_resource path="res://Art/Shroom Room/Right_open.png" type="Texture" id=9]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float Coldness : hint_range(0.0, 1.0, 0.1);

void fragment() {
	vec4 curr_color = texture(TEXTURE,UV);
	
	vec3 tmp = curr_color.rgb * vec3(0.3,0.59,0.11);
	float grey = tmp.r + tmp.g + tmp.b;
	COLOR.rgb = vec3(grey) * Coldness + curr_color.rgb * (1.0 - Coldness);
	if(curr_color.a < 0.01){
		COLOR.a = 0.0;
	} else {
		COLOR.a = 1.0;
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 3 )
shader_param/Coldness = null

[sub_resource type="NavigationPolygon" id=4]
vertices = PoolVector2Array( -44, 20, 44, 20, 44, 21, -44, 21 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( -44, 21, 44, 21, 44, 20, -44, 20 ) ]

[sub_resource type="NavigationPolygon" id=5]
vertices = PoolVector2Array( -4, 18, 4.00002, 18, 4.00002, 19, -4, 19 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( -4, 19, 4.00002, 19, 4.00002, 18, -4, 18 ) ]

[sub_resource type="NavigationPolygon" id=6]
vertices = PoolVector2Array( 4, 19, -4, 19, -4, 18, 4, 18 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 4, 19, -4, 19, -4, 18, 4, 18 ) ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 51, 20.9999 )

[node name="Room" type="Area2D"]
position = Vector2( 100, 136 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.999999, 1 )
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 102, 42 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Sprite"]
scale = Vector2( 1, 1 )
navpoly = SubResource( 4 )

[node name="SpriteR" type="Sprite" parent="Sprite"]
position = Vector2( 48, 2 )
texture = ExtResource( 9 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Sprite/SpriteR"]
navpoly = SubResource( 5 )

[node name="SpriteLO" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( -48, 2 )
texture = ExtResource( 7 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Sprite/SpriteLO"]
navpoly = SubResource( 6 )

[node name="SpriteLC" type="Sprite" parent="Sprite"]
position = Vector2( -47.5, 2 )
scale = Vector2( 1, 1 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 4.54747e-12, 0 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OutsidePanel" type="Panel" parent="CanvasLayer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.352941 )
margin_right = 640.0
margin_bottom = 360.0

[node name="BuildingPanel" type="Panel" parent="CanvasLayer/OutsidePanel"]
margin_left = 100.0
margin_top = 136.0
margin_right = 539.0
margin_bottom = 304.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/OutsidePanel/BuildingPanel"]
margin_right = 439.0
margin_bottom = 168.0
color = Color( 0.568627, 0.439216, 0.192157, 1 )

[node name="BuildingEmpty" type="Panel" parent="CanvasLayer/OutsidePanel/BuildingPanel"]
margin_left = 44.0
margin_top = 16.0
margin_right = 140.0
margin_bottom = 152.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingEmpty"]
margin_left = 8.0
margin_top = 40.0
margin_right = 110.0
margin_bottom = 82.0
rect_scale = Vector2( 0.782, 0.973 )
texture = ExtResource( 5 )
stretch_mode = 1

[node name="Button" type="Button" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingEmpty"]
margin_left = 8.0
margin_top = 104.0
margin_right = 88.0
margin_bottom = 124.0
text = "Build"

[node name="Label" type="Label" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingEmpty"]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 30.0
text = "Empty Room"
align = 1
valign = 1

[node name="BuildingFood" type="Panel" parent="CanvasLayer/OutsidePanel/BuildingPanel"]
margin_left = 172.0
margin_top = 16.0
margin_right = 268.0
margin_bottom = 152.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingFood"]
margin_left = 8.0
margin_top = 40.0
margin_right = 110.0
margin_bottom = 82.0
rect_scale = Vector2( 0.782, 0.973 )
texture = ExtResource( 3 )
stretch_mode = 1

[node name="Button" type="Button" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingFood"]
margin_left = 8.0
margin_top = 104.0
margin_right = 88.0
margin_bottom = 124.0
text = "Build"

[node name="Label" type="Label" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingFood"]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 30.0
text = "Blue Room"
align = 1
valign = 1

[node name="BuildingSleep" type="Panel" parent="CanvasLayer/OutsidePanel/BuildingPanel"]
margin_left = 300.0
margin_top = 16.0
margin_right = 396.0
margin_bottom = 152.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingSleep"]
margin_left = 8.0
margin_top = 40.0
margin_right = 110.0
margin_bottom = 82.0
rect_scale = Vector2( 0.782, 0.973 )
texture = ExtResource( 4 )
stretch_mode = 1

[node name="Button" type="Button" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingSleep"]
margin_left = 8.0
margin_top = 104.0
margin_right = 88.0
margin_bottom = 124.0
text = "Build"

[node name="Label" type="Label" parent="CanvasLayer/OutsidePanel/BuildingPanel/BuildingSleep"]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 30.0
text = "Green Room"
align = 1
valign = 1

[connection signal="gui_input" from="CanvasLayer/OutsidePanel" to="." method="_on_OutsidePanel_gui_input"]
[connection signal="build_room" from="CanvasLayer/OutsidePanel/BuildingPanel/BuildingEmpty" to="." method="_on_BuildingEmpty_build_room"]
[connection signal="pressed" from="CanvasLayer/OutsidePanel/BuildingPanel/BuildingEmpty/Button" to="CanvasLayer/OutsidePanel/BuildingPanel/BuildingEmpty" method="_on_Button_pressed"]
[connection signal="build_room" from="CanvasLayer/OutsidePanel/BuildingPanel/BuildingFood" to="." method="_on_BuildingFood_build_room"]
[connection signal="pressed" from="CanvasLayer/OutsidePanel/BuildingPanel/BuildingFood/Button" to="CanvasLayer/OutsidePanel/BuildingPanel/BuildingFood" method="_on_Button_pressed"]
[connection signal="build_room" from="CanvasLayer/OutsidePanel/BuildingPanel/BuildingSleep" to="." method="_on_BuildingSleep_build_room"]
[connection signal="pressed" from="CanvasLayer/OutsidePanel/BuildingPanel/BuildingSleep/Button" to="CanvasLayer/OutsidePanel/BuildingPanel/BuildingSleep" method="_on_Button_pressed"]
